- Major internal changes. * Switched from the global object to a Class, named __PRIVATE__ with a static array * Moved all private functions into the appropriate classes. Any functional private functions were moved to within __PRIVATE__ - Brought in the configuration file from Bhesse's fork, so now I know my code coverage, and his phpunit bootstrap file. Much thanks!

--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,22 @@
     }
   ],
   "autoload": {
+    "psr-4": {
+      "PHPixme\\": "src/PHPixme"
+    },
     "files": [
       "src/PHPixme/functional.php",
       "src/PHPixme/companionsAttempt.php",
       "src/PHPixme/companionsMaybe.php",
       "src/PHPixme/companionsSeq.php"
-    ],
-    "psr-4": {
-      "PHPixme\\": "src/PHPixme"
-    }
+    ]
   },
   "require-dev": {
     "phpunit/phpunit": "5.1.*"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "PHPixme\\": "tests"
+    }
   }
 }
