- work on refactoring the interfaces so that Pot may have all the aspects of a collection, while not being forced to implement functions that would only be applicable for the empty object patters, as pot must always have a value. Pot is a class that extends \Exception, but has many of the collection values. This goes along with the function toss, which will box up the value so that it can be thrown, no matter what it was. Much unit testing ahead.

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
       "src/PHPixme/functional.php",
       "src/PHPixme/companionsAttempt.php",
       "src/PHPixme/companionsMaybe.php",
-      "src/PHPixme/companionsSeq.php"
+      "src/PHPixme/companionsSeq.php",
+      "src/PHPixme/companionsPot.php"
     ]
   },
   "require-dev": {
