- Starting to unit test the __PRIVATE__ class as the functional complexity has greatly raised - Moved to internal curry functions which eat arguments, which allows for performance boosts based on logic assumptions about when a function will be complete. This still needs to be finished unit testing. - corrected license description in composer - added some testing classes into phpunit.php so that they can be properly tested for. Somehow the class was being eaten by the require statement. Still having issues with functions.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "rkgladson/PHPixme",
   "description": "Proves a functional and aspect oriented helpers for php.",
   "minimum-stability": "alpha",
-  "license": "apache2",
+  "license": "mit",
   "authors": [
     {
       "name": "Gladson",
