Either - Added new disjoint union **Either** , which includes Left and Right. Either is not a collection, but its subclasses can be projected into a Maybe. - Unit tested Either, Left, and Right. - Added new trait, AssertIs. This is likely to change names in a future version as it is expanded into the other classes. - Removed the unused Single Iterator Trait.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "files": [
       "src/PHPixme/functional.php",
       "src/PHPixme/companionsAttempt.php",
+      "src/PHPixme/companionsEither.php",
       "src/PHPixme/companionsMaybe.php",
       "src/PHPixme/companionsSeq.php",
       "src/PHPixme/companionsPot.php"
