Operation Functional  Operands - Added and unit tested the majority of operands, those outstanding are >>, <<, (??, :?). Those implemented are +, -, . , *, %, /, &&, &, ||, |, xor, ^, !, ~, <, <=, <=>, =>, >, ==, ===, !=, !==

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "files": [
       "src/PHPixme/functional.php",
+      "src/PHPixme/operator.php",
       "src/PHPixme/companionsAttempt.php",
       "src/PHPixme/companionsEither.php",
       "src/PHPixme/companionsMaybe.php",
