Broke out each function and operand into a separate file.

--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,7 @@
       "PHPixme\\": "src/PHPixme"
     },
     "files": [
-      "src/PHPixme/functional.php",
-      "src/PHPixme/operator.php",
-      "src/PHPixme/companionsAttempt.php",
-      "src/PHPixme/companionsEither.php",
-      "src/PHPixme/companionsMaybe.php",
-      "src/PHPixme/companionsSeq.php",
-      "src/PHPixme/companionsPot.php"
+      "src/PHPixme/__require__.php"
     ]
   },
   "require-dev": {
